--- a/team.html
+++ b/team.html
@@ -130,7 +130,7 @@
                 <div class="team__member">
                     <a href="#" class="team__link">
                         <div class="team__image-container">
-                            <img src="./assets/images/1681148284-christopher-heymann-4_5.png" alt="Diana Biggs"
+                            <img src="./assets/images/1736506320-2025-01-10-11-51-28.jpg" alt="Diana Biggs"
                                 class="team__image">
                         </div>
                         <p class="team__emoji">&lt;(^_^)&gt;</p>
@@ -140,8 +140,7 @@
                 <div class="team__member">
                     <a href="#" class="team__link">
                         <div class="team__image-container">
-                            <img src="./assets/images/1681148284-christopher-heymann-4_5.png" alt="Diana Biggs"
-                                class="team__image">
+                            <img src="./assets/images/1732730946-henrypunk.png" alt="Diana Biggs" class="team__image">
                         </div>
                         <p class="team__emoji">&lt;(^_^)&gt;</p>
                         <p class="team__name">Diana Biggs</p>
@@ -150,7 +149,7 @@
                 <div class="team__member">
                     <a href="#" class="team__link">
                         <div class="team__image-container">
-                            <img src="./assets/images/1681148284-christopher-heymann-4_5.png" alt="Christopher Heymann"
+                            <img src="./assets/images/1681148441-michael-4_5.png" alt="Christopher Heymann"
                                 class="team__image">
                         </div>
                         <p class="team__emoji">✌(-‿-)✌</p>
@@ -161,7 +160,7 @@
                 <div class="team__member">
                     <a href="#" class="team__link">
                         <div class="team__image-container">
-                            <img src="./assets/images/1686225010-headshot-zz-4_5.png" alt="Lasse Clausen"
+                            <img src="./assets/images/1736430702-2025-01-09-14-50-44.jpg" alt="Lasse Clausen"
                                 class="team__image">
                         </div>
                         <p class="team__emoji">(╯°□°)╯︵</p>
@@ -172,16 +171,7 @@
                 <div class="team__member">
                     <a href="#" class="team__link">
                         <div class="team__image-container">
-                            <img src="./assets/images/1733133849-3910vqbh.jpeg" alt="Diana Biggs" class="team__image">
-                        </div>
-                        <p class="team__emoji">&lt;(^_^)&gt;</p>
-                        <p class="team__name">Diana Biggs</p>
-                    </a>
-                </div>
-                <div class="team__member">
-                    <a href="#" class="team__link">
-                        <div class="team__image-container">
-                            <img src="./assets/images/1681148284-christopher-heymann-4_5.png" alt="Diana Biggs"
+                            <img src="./assets/images/1730696631-2024-11-04-12-03-38.jpg" alt="Diana Biggs"
                                 class="team__image">
                         </div>
                         <p class="team__emoji">&lt;(^_^)&gt;</p>
@@ -191,7 +181,7 @@
                 <div class="team__member">
                     <a href="#" class="team__link">
                         <div class="team__image-container">
-                            <img src="./assets/images/1681148284-christopher-heymann-4_5.png" alt="Diana Biggs"
+                            <img src="./assets/images/1686225314-headshot-xx-4_5.png" alt="Diana Biggs"
                                 class="team__image">
                         </div>
                         <p class="team__emoji">&lt;(^_^)&gt;</p>
@@ -201,7 +191,16 @@
                 <div class="team__member">
                     <a href="#" class="team__link">
                         <div class="team__image-container">
-                            <img src="./assets/images/1681148284-christopher-heymann-4_5.png" alt="Christopher Heymann"
+                            <img src="./assets/images/1732877076-headshot_1.jpeg" alt="Diana Biggs" class="team__image">
+                        </div>
+                        <p class="team__emoji">&lt;(^_^)&gt;</p>
+                        <p class="team__name">Diana Biggs</p>
+                    </a>
+                </div>
+                <div class="team__member">
+                    <a href="#" class="team__link">
+                        <div class="team__image-container">
+                            <img src="./assets/images/1718641791-2024-06-17-18-29-16.jpg" alt="Christopher Heymann"
                                 class="team__image">
                         </div>
                         <p class="team__emoji">✌(-‿-)✌</p>
